# boswell

./: .env.example  .gitignore  AUDIO_DEBUG.md  AUDIO_DEBUG_FINDINGS.md  DEPLOY.md  Dockerfile  Dockerfile.room-ui  Dockerfile.worker  ELEVENLABS_DEBUG.md  Procfile  README.md  alembic.ini  claude.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.toml  render.yaml
docs/: interview-types.md
docs/plans/: 2025-01-22-boswell-design.md  2025-01-22-voice-bot-design.md  2025-01-22-voice-bot-improvements.md  2025-01-23-server-deployment-design.md  2025-01-23-server-implementation-plan.md  2025-01-26-persistent-guest-links-design.md  2025-01-26-persistent-guest-links-implementation.md  2026-01-24-custom-daily-room-ui-design.md  2026-01-24-custom-daily-room-ui-implementation.md  2026-01-24-generic-interview-links.md  2026-01-24-project-interview-model-design.md  2026-01-24-project-interview-model-implementation.md  2026-01-25-interview-types-design.md  2026-01-26-project-template-first.md  2026-01-26-unified-interview-creation.md  2026-01-29-bulk-interview-actions-design.md  2026-01-29-bulk-interview-actions.md  2026-01-30-ui-ux-consolidation.md  2026-02-07-display-question-text.md  2026-02-09-stability-performance-plan.md  2026-02-10-account-sharing-design.md  2026-02-10-account-sharing-impl.md
docs/superpowers/plans/: 2026-02-11-admin-user-dashboard.md
docs/superpowers/specs/: 2026-02-11-admin-user-dashboard-design.md
personas/: boswell_interviewer.md
room-ui/: index.html  package-lock.json  package.json  vite.config.ts
room-ui/src/: App.tsx  main.tsx
room-ui/src/components/: AudioVisualizer.tsx  BoswellBranding.tsx  Controls.tsx  LoadingScreen.tsx  Room.tsx  index.ts
room-ui/src/styles/: room.css  variables.css
scripts/: build-room-ui.sh  entrypoint.sh  start_jobs.sh  start_web.sh  start_worker.sh
src/boswell/: __init__.py  cli.py  config.py  conversation.py  ingestion.py  interview.py  meeting.py  output.py
src/boswell/server/: __init__.py  __main__.py  auth_utils.py  authorization.py  config.py  database.py  email.py  jobs.py  jobs_main.py  main.py  models.py  worker.py
src/boswell/server/migrations/: env.py
src/boswell/server/migrations/versions/: 001_initial.py  2bed6a0aa001_make_interview_email_optional.py  3513772ba486_add_public_link_token_to_projects.py  3e89351eee96_add_project_name_and_interview_context_.py  4a7c2d8e9f01_add_public_description_to_project.py  50f315d3bc02_add_public_template_id_to_projects.py  a1b2c3d4e5f6_add_suggested_questions_to_analyses.py  acf23ac9efd5_add_interview_mode_to_interviews.py  b1d2e3f4a5b6_add_interview_angles.py  c3d4e5f6a7b8_add_retry_backoff_columns_to_guests.py  cca0c543540a_add_session_count_to_interviews.py  (+7 more)
src/boswell/server/routes/: __init__.py  admin.py  auth.py  guest.py
src/boswell/server/templates/: base.html
src/boswell/voice/: __init__.py  acknowledgment.py  audio_diagnostics.py  bot.py  bracket_buffer.py  display_text.py  mode_detection.py  pipeline.py  prompts.py  speaking_state.py  speed_control.py  strike_control.py  transcript.py
tests/: __init__.py  test_admin_users.py  test_auth.py  test_authorization.py  test_bracket_buffer.py  test_config.py  test_conversation.py  test_display_text.py  test_ingestion.py  test_interview.py  test_invite_claim.py  test_meeting.py  test_models_sharing.py  test_output.py  test_sharing_integration.py  test_worker_integration.py
(+28 files in other folders)
