[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boswell"
version = "0.1.0"
description = "AI Research Interviewer - An open-source AI interviewer that conducts research-informed interviews autonomously"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Noah Raford"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "anthropic>=0.18.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
voice = [
    "pipecat-ai>=0.0.40",
    "pipecat-ai[daily]>=0.0.40",
    "pipecat-ai[deepgram]>=0.0.40",
    "pipecat-ai[elevenlabs]>=0.0.40",
    "pipecat-ai[anthropic]>=0.0.40",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
boswell = "boswell.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
